--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>parquet-avro</artifactId>
             <version>1.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.2</version>
+        </dependency>
     </dependencies>
 
 </project>
