--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -87,5 +90,4 @@
             <version>1.12.0</version>
         </dependency>
     </dependencies>
-
 </project>
